# godll

./: README.md  jwtlib.c  jwtlibgo.go  jwtlibgo.h  makedll.bat
testexe/: CMakeLists.txt  make_Debug2015.bat
testexe/sources/: CMakeLists.txt  main.cpp
